src/test/resources/cocos/valid/scopes/simple/Import Vehicle.sysml
package 'Import Vehicle'{
  private import 'Symbol Definition'::Vehicle;
  block AlreadyInScope;
}