src/test/resources/cocos/invalid/imports/importIsDefined/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'ThisPackageDoesNotExist'::Vehicle as AlreadyInScope;
}